# nettowel

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yaml
nettowel/: __init__.py  __main__.py  _common.py  exceptions.py  jinja.py  jsonpatch.py  logger.py  netmiko.py  pandas.py  restconf.py  trogon_tui.py  ttp.py  yaml.py
nettowel/cli/: _common.py  _output.py  diff.py  help.py  ip.py  jinja.py  jsonpatch.py  logging.py  main.py  napalm.py  netmiko.py  nornir.py  pandas.py  restconf.py  scrapli.py  textfsm.py  ttp.py  yaml.py
tests/: test_exceptions.py  test_ipaddress_cli.py  test_jinja_cli.py  test_jsonpatch.py  test_main_cli.py  test_nettowel.py  test_ttp_cli.py  test_yaml_cli.py
tests/jinja/: data1.yaml  data2.yaml  data3.yaml  template1.j2  template2.j2  template3.j2  template4.j2  templateFail.j2
tests/jsonpatch/: data2.yaml  data_patch.json
tests/ttp/: data1.txt  data2.txt  template1.txt  template2.txt
tests/yaml/: json1.json  yaml1.yaml
