[tool.poetry]
name = "nettowel"
version = "0.6.0"
description = "Network Automation Collection"
authors = ["ubaumann <github@m.ubaumann.ch>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/InfrastructureAsCode-ch/nettowel"
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9|^0.10|^0.11|^0.12"
rich = "^12|^13"
Jinja2 = {version = "^3", optional = true}
ttp = {version = "^0.9", optional = true}
textfsm = {version = "^1.1", optional = true}
napalm = {version = "^4", optional = true}
netmiko = {version = "^4", optional = true}
scrapli = {version = "^2023.1.30", optional = true}
nornir = {version = "^3.2", optional = true}
"ruamel.yaml" = "^0.18"
jinja2schema = {version = "^0.1.4", optional = true}
qrcode = "^7.3.1"
python-dotenv = "^1"
requests = "^2.27.1"
nornir-napalm = {version = "^0.4", optional = true}
nornir-scrapli = {version = "^2023.1.30", optional = true}
nornir-utils = {version = "^0.2.0", optional = true}
nornir-jinja2 = {version = "^0.2.0", optional = true}
nornir-pyxl = {version = "^1.0.1", optional = true}
nornir-http = {version = "^0.1", optional = true}
nornir-netmiko = {version = "^1.0.0", optional = true}
nornir-rich = {version = "^0.1", optional = true}
pandas = {version = "^2", optional = true}
trogon = {version = "^0.5.0", optional = true}
jsonpatch = {version = "^1.33", optional = true}


[tool.poetry.dev-dependencies]
black = "^22|^23|^24"
pytest = "^7|^8"
mypy = "^0.942|^1"
types-requests = "^2.27.20"

[tool.poetry.extras]
jinja = ["Jinja2", "jinja2schema"]
ttp = ["ttp"]
textfsm = ["textfsm"]
napalm = ["napalm"]
netmiko = ["netmiko"]
scrapli = ["scrapli"]
nornir = ["nornir", "nornir-napalm", "nornir-scrapli", "nornir-utils", "nornir-jinja2", "nornir-pyxl", "nornir-http", "nornir-netmiko", "nornir-rich"]
pandas = ["pandas"]
tui = ["trogon"]
jsonpatch = ["jsonpatch"]
full = [
    "Jinja2", 
    "jinja2schema", 
    "ttp", 
    "textfsm", 
    "napalm", 
    "netmiko", 
    "scrapli", 
    "nornir", 
    "nornir-napalm", 
    "nornir-scrapli", 
    "nornir-utils", 
    "nornir-jinja2", 
    "nornir-pyxl", 
    "nornir-http", 
    "nornir-netmiko", 
    "nornir-rich", 
    "pandas",
    "trogon",
    "jsonpatch"
]

[tool.poetry.scripts]
nettowel = 'nettowel.cli.main:run'
nt = 'nettowel.cli.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "nornir.core"
ignore_errors = true